--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "splitpanes": "^3.1.1",
+    "sql-formatter": "^11.0.2",
     "vue": "^3.2.37"
   },
   "devDependencies": {
