--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueuse/components": "^9.3.1",
     "splitpanes": "^3.1.1",
     "sql-formatter": "^11.0.2",
-    "vue": "^3.2.37"
+    "vue": "^3.2.37",
+    "vue-final-modal": "^3.4.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.1.0",
