--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "sql-formatter": "^11.0.2",
     "vue": "^3.2.37",
     "vue-final-modal": "^3.4.4",
+    "vue3-cookies": "^1.0.6",
     "vue3-treeview": "^0.4.0"
   },
   "devDependencies": {
